# metal-cpp-samples

./: .gitignore  CMakeLists.txt  LICENSE  README.md
MetalTutorialXcode/: Config.xcconfig
MetalTutorialXcode/HelloMetal/: main.cpp  mtl_implementation.cpp
MetalTutorialXcode/MetalTutorialXcode.xcodeproj/: project.pbxproj
MetalTutorialXcode/MetalTutorialXcode.xcodeproj/project.xcworkspace/xcuserdata/kyle.xcuserdatad/: UserInterfaceState.xcuserstate
MetalTutorialXcode/MetalTutorialXcode.xcodeproj/xcshareddata/xcschemes/: HelloMetal.xcscheme
MetalTutorialXcode/MetalTutorialXcode.xcodeproj/xcuserdata/kyle.xcuserdatad/xcschemes/: xcschememanagement.plist
libs/: CMakeLists.txt  Lib.cpp  dummy.cpp
src/: engine.hpp  engine.mm  main.cpp  main.mm  shader.metal  texture.cpp  texture.hpp
